spacing around issues and bring cory up in the frame

--- a/src/sass/partials/_issues.scss
+++ b/src/sass/partials/_issues.scss
@@ -12,6 +12,7 @@
     @include mq(leftCol) {
         position: relative;
         margin-left: 160px;
+        padding-bottom: 60px;
 
         &:before {
             content: '';
